flux/academy/auth-system/oauth2-proxy/app/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth
  namespace: auth-system
spec:
  chain:
    middlewares:
      - name: oauth-auth
      - name: oauth-errors
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth-auth
  namespace: auth-system
spec:
  forwardAuth:
    address: "https://auth.chancey.dev/oauth2/auth"
    trustForwardHeader: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth-errors
  namespace: auth-system
spec:
  errors:
    status:
      - "401-403"
    service:
      name: oauth2-proxy
      namespace: auth-system
      port: 4180
    query: "/oauth2/sign_in?rd={url}"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-headers
  namespace: auth-system
spec:
  headers:
    stsSeconds: 315360000
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    frameDeny: true
