flux/academy/auth-system/oauth2-proxy/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy-ingress
  namespace: auth-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.chancey.dev`) && PathPrefix(`/oauth2/`) || PathPrefix(`/oauth2/`)
      kind: Rule
      priority: 10
      middlewares:
        - name: default-headers
          namespace: default
      services:
        - name: oauth2-proxy
          kind: Service
          port: 4180
  tls:
    secretName: auth-cert-tls
